cp 	PR c++/34749 	* friend.c (do_friend): Call cplus_decl_attributes earlier.

testsuite
	PR c++/34749
	* g++.dg.ext/dllimport13.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@132585 138bc75d-0d04-0410-961f-82ee72b054a4